# Task-Executor

./: CMakeLists.txt  ComputationTask.cpp  ComputationTask.h  FileWriteTask.cpp  README.md  SleepTask.cpp  SleepTask.h  TaskManager.cpp  main.cpp  types.h
inc/: ComputationTask.h  DatabaseQueryTask.h  FileWriteTask.h  ITask.h  Logger.h  SleepTask.h  TaskManager.h  types.h
src/: ComputationTask.cpp  DatabaseQueryTask.cpp  FileWriteTask.cpp  SleepTask.cpp  TaskManager.cpp
